fixed: swagger security definition
