# classes/PleioRest/Controllers/User.php
@@ -6,7 +6,7 @@ class User {
     /**
      * @SWG\Post(
      *     path="/api/users/me/register_push",
-     *     security={{"oauth2": {"scope"}}},
+     *     security={{"oauth2": {"all"}}},
      *     tags={"user"},
      *     summary="Register application for push notifications.",
      *     description="Register an application to receive push notifications of activities.",
